# mmath

./: CMakeLists.txt  README.md
cmake/: MMathConfig.cmake.in
include/: mmath.h
include/mmath/: common.h  mat2.h  mat2d.h  mat3.h  mat4.h  quat.h  quat2.h  vec2.h  vec3.h  vec4.h
src/mmath/: common.c  mat2.c  mat2d.c  mat3.c  mat4.c  mmath_private.h  quat.c  vec2.c  vec3.c  vec4.c
